tests/build/cases/widget_new/incorrect_arg_type1.stderr
error[E0277]: the trait bound `bool: IntoVar<SideOffsets>` is not satisfied
  --> cases/widget_new/incorrect_arg_type1.rs:6:18
   |
6  |         margin = true
   |                  ^^^^ expected an implementor of trait `IntoVar<SideOffsets>`
   |
note: required by `margin_ArgsImpl::<T_margin>::new`
  --> $WORKSPACE/zero-ui/src/properties/layout.rs
   |
   | #[property(outer, default(0))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider borrowing here
   |
6  |         margin = &true
   |                  +
